plugins {
    id 'java-library'
    // plugins for release and publishing to maven repo
    id 'signing'
    id 'net.researchgate.release' version '3.1.0'
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
    id 'maven-publish'
    id 'jacoco'
}

description = 'A small utility library for applying JSON Patches to JSON documents.'
group = 'edu.kit.datamanager'


println "Building '${name}' version: '${version}'"
println "Running gradle version: $gradle.gradleVersion"
println "JDK version: ${JavaVersion.current()}"

repositories {
    mavenLocal()
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

def buildProfile = project.findProperty("buildProfile") ?: "minimal"

def profileFile = file("$rootDir/gradle/profile-${buildProfile}.gradle")

dependencies {
    implementation 'org.eclipse.parsson:parsson:1.1.9'
    implementation 'org.slf4j:slf4j-api:2.0.18'

    api 'jakarta.json:jakarta.json-api:2.1.3'         // API definition
    api 'tools.jackson.core:jackson-databind:3.2.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:6.1.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.1.0'
}
/////////////////////////////////////////////////////////////////////////////////
// Code coverage configuration with JaCoCo
/////////////////////////////////////////////////////////////////////////////////
test {
    finalizedBy jacocoTestReport
    useJUnitPlatform()
}

jacoco {
    toolVersion = "0.8.15"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
    }
}

///////////////////////////////////////////////////////////////////////////////
//for plugin maven-publish
//see https://docs.gradle.org/current/userguide/publishing_maven.html
///////////////////////////////////////////////////////////////////////////////
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            from components.java
            artifactId = 'json-patch-util'
            version = project.version
            pom {
                name.set('JSON Patch Utility Library')
                description.set('A small utility library for applying JSON Patches to JSON documents.')
                url.set('https://datamanager.kit.edu')
                licenses {
                    license {
                        name.set('The Apache License, Version 2.0')
                        url.set('https://www.apache.org/licenses/LICENSE-2.0.txt')
                    }
                }
                developers {
                    developer {
                        id.set('Jejkal')
                        name.set('Thomas Jejkal')
                        email.set('webmaster@datamanager.kit.edu')
                        roles.set(['developer', 'maintainer'])
                    }
                    developer {
                        id.set('HartmannV')
                        name.set('Volker Hartmann')
                        roles.set(['developer', 'maintainer'])
                    }
                }
                scm {
                    connection.set('scm:git:github.com/kit-data-manager/JsonPatch')
                    developerConnection.set('scm:git:github.com/kit-data-manager/JsonPatch')
                    url.set('https://github.com/kit-data-manager/JsonPatch')
                }
            }
        }
    }
    repositories {
        mavenLocal()
    }
}

// Apply profile-specific build configuration at the end of this build script
// to ensure that all settings are available.
if (profileFile.exists()) {
    apply from: profileFile
} else {
    throw new GradleException("Profile-file missing: $profileFile")
}
